--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intermediate CSS</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h2>I'am an h2</h2>
@@ -12,6 +13,6 @@
 <div class="test-box">200px value</div>
 
 <div class="test-box test-box-nosizing">200px wide + border + padding = 300px</div>
-<div class="test-box test-box-nosizing text-box-sizing">200px wide + border + padding + box-sizing: border-box = 200px</div>
+<div class="test-box test-box-nosizing test-box-sizing">200px wide + border + padding + box-sizing: border-box = 200px</div>
 </body>
 </html>
