doing the social list li

--- a/index.html
+++ b/index.html
@@ -7,12 +7,61 @@
     <title>Intermediate CSS</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+
+    <div class="full-hero hero-home">
+        <h11>
+            Hi I'm an h1
+        </h11>
+        <ul class="Social-list">
+            <li><a href="https://example.com" class="social-link">fb</a></li>
+            <li><a href="https://example.com" class="social-link">tw</a></li>
+            <li><a href="https://example.com" class="social-link">gh</a></li>
+        </ul>
+    </div>
     <h2>I'am an h2</h2>
+    <div class="bio-wrapper">
+<div class="bio-box">
+    <img src="https://placekitten.com/g/400/400" />
+    <h3>Uncle Bob</h3>
+    <a href="">Social Link</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat velit dolore corporis sapiente impedit nisi minima cupiditate atque in eaque culpa quaerat expedita tempora harum perferendis esse praesentium deleniti, assumenda illum non beatae itaque voluptate hic? Error laborum quis neque est sint incidunt cupiditate, dolore adipisci, debitis, illum facilis suscipit?
+    </p>
+</div>
+<div class="bio-box">
+    <img src="https://placekitten.com/g/400/400" />
+    <h3>The C++ Dude</h3>
+    <a href="">Social Link</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat velit dolore corporis sapiente impedit nisi minima cupiditate atque in eaque culpa quaerat expedita tempora harum perferendis esse praesentium deleniti, assumenda illum non beatae itaque voluptate hic? Error laborum quis neque est sint incidunt cupiditate, dolore adipisci, debitis, illum facilis suscipit?
+    </p>
+</div>
+<div class="bio-box">
+    <img src="https://placekitten.com/g/400/400" />
+    <h3>The Man who gave NVDIA a middle finger </h3>
+    <a href="">Social Link</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat velit dolore corporis sapiente impedit nisi minima cupiditate atque in eaque culpa quaerat expedita tempora harum perferendis esse praesentium deleniti, assumenda illum non beatae itaque voluptate hic? Error laborum quis neque est sint incidunt cupiditate, dolore adipisci, debitis, illum facilis suscipit?
+    </p>
+</div>
+<div class="bio-box">
+    <img src="https://placekitten.com/g/400/400" />
+    <h3>??</h3>
+    <a href="">Social Link</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat velit dolore corporis sapiente impedit nisi minima cupiditate atque in eaque culpa quaerat expedita tempora harum perferendis esse praesentium deleniti, assumenda illum non beatae itaque voluptate hic? Error laborum quis neque est sint incidunt cupiditate, dolore adipisci, debitis, illum facilis suscipit?
+    </p>
 
-<div class="test-box">200px value</div>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo nobis suscipit, minima dolor vel sed libero tenetur similique quam dignissimos praesentium deleniti ratione itaque ipsam! Quo ullam sapiente officiis molestiae, dolor dolorum enim adipisci consectetur veritatis fuga molestias quos repellat nostrum. Repudiandae eum quae quis harum quod, eius facere.
+</p>
+</div>
+</div>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo nobis suscipit, minima dolor vel sed libero tenetur similique quam dignissimos praesentium deleniti ratione itaque ipsam! Quo ullam sapiente officiis molestiae, dolor dolorum enim adipisci consectetur veritatis fuga molestias quos repellat nostrum. Repudiandae eum quae quis harum quod, eius facere.
+</p>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo nobis suscipit, minima dolor vel sed libero tenetur similique quam dignissimos praesentium deleniti ratione itaque ipsam! Quo ullam sapiente officiis molestiae, dolor dolorum enim adipisci consectetur veritatis fuga molestias quos repellat nostrum. Repudiandae eum quae quis harum quod, eius facere.
+</p>
 
-<div class="test-box test-box-nosizing">200px wide + border + padding = 300px</div>
-<div class="test-box test-box-nosizing test-box-sizing">200px wide + border + padding + box-sizing: border-box = 200px</div>
+
 </body>
 </html>
